Actualización de descripción de habitaciones en index

--- a/index.html
+++ b/index.html
@@ -378,14 +378,17 @@
 
         <div class="row">
           <div class="col-md-12">
-            <div class="section-title text-center">
+            <div class="section-title text-center mb-2">
               <h2>Habitaciones</h2>
+              <p class="fontHover">Todas nuestras habitaciones están decoradas con un estilo moderno y elegante. Incluyen
+                comodidades como Wi-Fi gratuito y Smart TV y cafeteras, para proporcionar la mejor comodidad y
+                descanso en el Centro Histórico de la Ciudad de México.</p>
             </div>
           </div>
         </div>
 
         <div class="row">
-          <!--Ejecutiva-->
+          <!--Ejecutiva - Normal -->
           <div class="feature-full-1col">
             <div class="image" style="background-image: url(assets/webp/EJECUTIVA_1.jpeg);">
               <div class="descrip text-center">
@@ -394,39 +397,40 @@
             </div>
             <div class="desc">
               <h3>Ejecutiva</h3>
-              <p>Las habitaciones ejecutivas están enfocadas a nuestros huéspedes de negocios. <small><a href="rooms.html#ejecutivaAncla">Ver más...</a></small></p>
+              <p>Ideal para los viajeros de negocios que buscan un lugar de descanso y relajación después de un
+                día de trabajo, cuenta con una cama matrimonial y vista interna. <small><a href="rooms.html#ejecutivaAncla">Ver más...</a></small></p>
               <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí<i class="ti-angle-right"></i></a></p>
             </div>
           </div>
-          <div class="feature-full-2col">
-            <!--Deluxe Cama Queen-->
-            <div class="f-hotel">
-              <div class="image" style="background-image: url(assets/webp/DELUXE_CAMA_QUEEN.jpeg);">
-                <div class="descrip text-center">
-                  <p><small>Reserva por</small><span>$1,221.76/noche</span></p>
-                </div>
-              </div>
-              <div class="desc">
-                <h3>Deluxe Cama Queen</h3>
-                <p>Nuestras habitaciones Deluxe son más amplias que las habitaciones ejecutivas. <small><a href="rooms.html#anclaDCQ">Ver más...</a></small></p>
-                <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+          <!----Deluxe Queen - Reverse---->
+          <div class="feature-full-1col" style="flex-direction: row-reverse">
+            <div class="image" style="background-image: url(assets/webp/DELUXE_CAMA_QUEEN.jpeg);">
+              <div class="descrip text-center">
+                <p><small>Reserva por</small><span>$1,221.76/noche</span></p>
               </div>
             </div>
-            <!--Deluxe dos camas-->
-            <div class="f-hotel">
-              <div class="image" style="background-image: url(assets/webp/DELUXE_2_CAMAS_2.jpeg);">
-                <div class="descrip text-center">
-                  <p><small>Reserva por</small><span>$1,297.08/noche</span></p>
-                </div>
-              </div>
-              <div class="desc">
-                <h3>Deluxe Dos Camas</h3>
-                <p>Habitaciones más amplias, cuentan con dos camas matrimoniales para hospedar cómodamente a 4 personas. <small><a href="rooms.html#anclaDDC">Ver más...</a></small></p>
-                <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
-              </div>
+            <div class="desc">
+              <h3>Deluxe Cama Queen</h3>
+              <p>Ubicadas del 1er al 5to piso, cuenta con ventana fija que permite la iluminación a la habitación con
+                vista al interior del hotel y televisor de 28 pulgadas. <small><a href="rooms.html#anclaDCQ">Ver más...</a></small></p>
+              <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
             </div>
           </div>
-          <!--Master Suite-->
+          <!----Deluxe 2 Camas - Normal---->
+          <div class="feature-full-1col">
+            <div class="image" style="background-image: url(assets/webp/DELUXE_2_CAMAS_2.jpeg);">
+              <div class="descrip text-center">
+                <p><small>Reserva por</small><span>$1,297.08/noche</span></p>
+              </div>
+            </div>
+            <div class="desc">
+              <h3>Deluxe Dos Camas Matrimoniales</h3>
+              <p>Ideal para viajes en familia, con capacidad para alojar hasta cuatro personas. Cuenta con vista al
+                interior del hotel y ventana fija, televisor de 28 pulgadas.<br><span style="font-size: 1.4rem;">*Accesible para mascotas. </span><br><small><a href="rooms.html#anclaDDC">Ver más...</a></small></p>
+              <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+            </div>
+          </div>
+          <!----Master Suite - Reverse---->
           <div class="feature-full-1col" style="flex-direction: row-reverse;">
             <div class="image" style="background-image: url(assets/webp/MASTER_SUITE.jpeg);">
               <div class="descrip text-center">
@@ -435,37 +439,62 @@
             </div>
             <div class="desc">
               <h3>Master Suite</h3>
-              <p>Habitación amplia con una terraza privada con jacuzzi, en ella encontrarás la comodidad necesaria para relajarte. <small><a href="rooms.html#anclaMS">Ver más...</a></small></p>
+              <p style="margin-bottom: 0!important;">Ubicadas en el 5to piso, nuestra Master Suite cuenta con cama King size una terraza privada con
+                jacuzzi ideal para tomar un descanso, también está equipada con televisor de 38 pulgadas.
+              </p>
+              <ul style="font-size: 1.5rem; list-style: none; padding-left: 0;">
+                <li>*Servibar en cortesía</li>
+                <li>*Bata de baño</li>
+                <li>*Disponibilidad de cunas</li>
+                <li><a href="rooms.html#anclaMS">Ver más...</a></li>
+              </ul>
               <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
             </div>
           </div>
-          <!--Suite Tina Antigua-->
-          <div class="feature-full-2col" style="flex-direction: revert">
-            <div class="f-hotel">
-              <div class="image" style="background-image: url(./assets/webp/SUITE_CON_TINA_4.jpeg);">
-                <div class="descrip text-center">
-                  <p><small>Reserva por</small><span>$1,589.96/noche</span></p>
-                </div>
-              </div>
-              <div class="desc">
-                <h3>Suite Tina Antigua</h3>
-                <p>En esta habitación podrás encontrar amplitud, comodidad y te enamorarás de su tina antigua que da un estilo vintage. Vista exterior a la calle principal del hotel. <small><a href="rooms.html#anclaSTA">Ver más...</a></small></p>
-                <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+          <!----Suite Tina Antigua - Normal---->
+          <div class="feature-full-1col">
+            <div class="image" style="background-image: url(./assets/webp/SUITE_CON_TINA_4.jpeg);">
+              <div class="descrip text-center">
+                <p><small>Reserva por</small><span>$1,589.96/noche</span></p>
               </div>
             </div>
-            <div class="f-hotel">
-              <div class="image" style="background-image: url(assets/webp/SUITE_CON_JACUZZI_6.jpeg);">
-                <div class="descrip text-center">
-                  <p><small>Reserva por</small><span>$1,589.96/noche</span></p>
-                </div>
-              </div>
-              <div class="desc">
-                <h3>Suite Jacuzzi</h3>
-                <p>Habitación amplia, diseñada para que puedas relajarte tanto en su amplia cama como en su jacuzzi de hidromasaje, Vista exterior a la calle principal del hotel. <small><a href="rooms.html#anclaSJ">Ver más...</a></small></p>
-                <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
-              </div>
+            <div class="desc">
+              <h3>Suite Tina Antigua</h3>
+              <p style="margin-bottom: 0!important;">En esta habitación podrás encontrar amplitud, comodidad y te enamorarás de su tina antigua que
+                da un estilo vintage. Cuenta con cama King Size y tina antigua, ubicadas en el 1er al 4to piso,
+                ventana desplegable con vista al exterior de la calle de República de Uruguay, aislante de ruido,
+                equipada con televisor de 38 pulgadas.
+              </p>
+              <ul style="font-size: 1.5rem; list-style: none; padding-left: 0;">
+                <li>*Servibar en cortesía</li>
+                <li>*Bata de baño</li>
+                <li>*Disponibilidad de cunas</li>
+                <li><a href="rooms.html#anclaSTA">Ver más...</a></li>
+              </ul>
+              <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
             </div>
           </div>
+          <!----Suite Jacuzzi - Reverse---->
+          <div class="feature-full-1col" style="flex-direction: row-reverse">
+            <div class="image" style="background-image: url(assets/webp/SUITE_CON_JACUZZI_6.jpeg);">
+              <div class="descrip text-center">
+                <p><small>Reserva por</small><span>$1,589.96/noche</span></p>
+              </div>
+            </div>
+            <div class="desc">
+              <h3>Suite Jacuzzi</h3>
+              <p style="margin-bottom:0!important;">Ubicadas en el 1er al 4to piso, nuestra suite con Jacuzzi cuenta con cama King size y ventana
+                desplegable con vista al exterior de la calle de República de Uruguay, aislante de ruido, equipada
+                con televisor de 38 pulgadas.</p>
+              <ul style="font-size: 1.5rem; list-style: none; padding-left: 0;">
+                <li>*Servibar en cortesía</li>
+                <li>*Accesible para mascotas</li>
+                <li><a href="rooms.html#anclaSJ">Ver más...</a></li>
+              </ul>
+              <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+            </div>
+          </div>
+          <!----Junior Suite - Normal---->
           <div class="feature-full-1col">
             <div class="image" style="background-image: url(https://media.xmlcal.com/pic/p0003/6868/85.png);">
               <div class="descrip text-center">
@@ -474,10 +503,39 @@
             </div>
             <div class="desc">
               <h3>Junior Suite</h3>
-              <p>Habitación amplia con cama king size, con vista interior, en ella encontrarás la comodidad necesaria para relajarte. <small><a href="rooms.html#anclaJS">Ver más...</a></small></p>
-              <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+              <p style="margin-bottom: 0!important;">Ubicadas del 1er al 4to piso, equipadas con cama King size nuestra Junior suite es ideal para
+                tomar un descanso. Cuenta con vista al interior del hotel y ventana fija, televisor de 38 pulgadas.
+              </p>
+              <ul style="font-size: 1.5rem; list-style: none; padding-left: 0;">
+                <li>*Disponibilidad de cunas</li>
+                <li>*Accesible para mascotas</li>
+                <li><a href="rooms.html#anclaJS">Ver más...</a></li>
+              </ul>
+              <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
             </div>
           </div>
+          <!----Suite con Vista - Reverse---->
+          <div class="feature-full-1col" style="flex-direction: row-reverse;">
+            <div class="image" style="background-image: url(./assets/webp/SUITE_CON_VISTA.jpeg);">
+              <div class="descrip text-center">
+                <p><small>Reserva por</small><span>$??/noche</span></p>
+              </div>
+            </div>
+            <div class="desc">
+              <h3>Suite con Vista</h3>
+              <p style="margin-bottom: 0!important;">Ubicadas en el 1er al 4to piso, nuestra suite cuenta con cama King size y ventana desplegable con
+                vista al exterior de la calle de República de Uruguay, aislante de ruido, equipada con televisor de
+                38 pulgadas.
+              </p>
+              <ul style="font-size: 1.5rem; list-style: none; padding-left: 0;">
+                  <li>*Servibar en cortesía</li>
+                  <li>*Accesible para mascotas</li>
+                  <li><a href="rooms.html#anclaSV">Ver más...</a></li>
+              </ul>
+              <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+            </div>
+          </div>
+          <!-------Fin habitaciones-------->
         </div>
 
       </div>
@@ -717,6 +775,7 @@
         <div class="row">
           <div class="col-md-3">
             <div class="copyright">
+              <small class="cursiveFont fontHover">El punto más cómodo de México.</small>
               <p><small>&copy; Hotel Punto MX 2022<br> Todos los derechos reservados. </small> <br>
               </p>
             </div>
