--- a/rooms.html
+++ b/rooms.html
@@ -272,22 +272,22 @@
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
                         <h2 class="cursiveFont">Ejecutiva</h2>
-                        <p style="color:#FFF;">Las habitaciones ejecutivas están enfocadas a nuestros huéspedes de negocios.</p>
+                        <p style="color:#FFF;">Ideal para los viajeros de negocios que buscan un lugar de descanso y relajación después de un
+                            día de trabajo, cuenta con una cama matrimonial y vista interna.</p>
                         <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
                     </div>
                 </section>
                 <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse" id="anclaDCQ">
-
                     <div class="tm-right tm-slideshow tm-slideshow-highlight">
                         <img src="./assets/webp/DELUXE_QUEEN.jpeg" alt="Hotel PuntoMX Habitación Deluxe Cama QUEEN">
                         <img src="./assets/webp/DELUXE_CAMA_QUEEN.jpeg" alt="Hotel PuntoMX Habitación Deluxe Cama QUEEN">
                         <img src="./assets/webp/DELUXE_QUEEN_1.jpeg" alt="Hotel PuntoMX Habitación Deluxe Cama QUEEN">
                         <img src="./assets/webp/DELUXE_QUEEN_2.jpeg" alt="Hotel PuntoMX Habitación Deluxe Cama QUEEN">
                     </div>
-
                     <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
                         <h2 class="cursiveFont">Deluxe Cama Queen</h2>
-                        <p style="color:#FFF;">Nuestras habitaciones Deluxe son más amplias que las habitaciones ejecutivas.</p>
+                        <p style="color:#FFF;">Ubicadas del 1er al 5to piso, cuenta con ventana fija que permite la iluminación a la habitación con
+                            vista al interior del hotel y televisor de 28 pulgadas.</p>
                         <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-second btn-luxe-second">Reserva aquí <i class="ti-angle-right"></i></a></p>
                     </div>
 
@@ -302,18 +302,23 @@
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
                         <h2 class="cursiveFont">Deluxe Dos Camas</h2>
-                        <p style="color:#FFF;">Habitaciones más amplias, cuentan con dos camas matrimoniales para hospedar cómodamente a 4 personas.</p>
-                        <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a> <i class="fa-solid fa-paw" data-toggle="tooltip" data-placement="top" title="Habitación PetFriendly" style="color: #000!important; font-size: 2.5rem!important;"></i></p>
+                        <p style="color:#FFF;">Ideal para viajes en familia, con capacidad para alojar hasta cuatro personas. Cuenta con vista al
+                            interior del hotel y ventana fija, televisor de 28 pulgadas.<br> <small></small></p>
+                        <p>
+                            <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">
+                                Reserva aquí<i class="ti-angle-right"></i>
+                            </a>
+                            <!---Iconos--->
+                            <i class="fa-solid fa-paw" data-toggle="tooltip" data-placement="top" title="Habitación PetFriendly" style="color: #000!important; font-size: 2.5rem!important;"></i>
+                        </p>
                     </div>
                 </section>
                 <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse" id="anclaMS">
-
                     <div class="tm-right tm-slideshow tm-slideshow-highlight">
                         <img src="./assets/webp/MASTER_SUITE.jpeg" alt="Hotel PuntoMX Habitación Master Suite CDMX">
                         <img src="./assets/webp/MASTER_SUITE_3.jpeg" alt="Hotel PuntoMX Habitación Master Suite CDMX">
                         <img src="./assets/webp/MASTER_SUITE_4.jpeg" alt="Hotel PuntoMX Habitación Master Suite CDMX">
                     </div>
-
                     <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
                         <h2 class="cursiveFont">Máster Suite</h2>
                         <p style="color:#FFF;">Habitación amplia con una terraza privada con jacuzzi, en ella encontrarás la comodidad necesaria para relajarte.</p>
@@ -330,7 +335,7 @@
                     <div class="tm-slideshow-description tm-bg-primary">
                         <h2 class="cursiveFont">Suite Tina Antigua</h2>
                         <p style="color:#FFF;">En esta habitación podrás encontrar amplitud, comodidad y te enamorarás de su tina antigua que da un estilo vintage. Vista exterior a la calle principal del hotel.</p>
-                        <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+                        <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a> Iconos</p>
                     </div>
                 </section>
                 <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse" id="anclaSJ">
