--- a/roomservice.html
+++ b/roomservice.html
@@ -272,6 +272,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="copyright">
+                            <small class="cursiveFont fontHover">El punto más cómodo de México.</small>
                             <p><small>&copy; Hotel Punto MX 2022<br> Todos los derechos reservados. </small> <br>
                             </p>
                         </div>
