--- a/cafe.html
+++ b/cafe.html
@@ -270,7 +270,8 @@
                     <div class="col-md-4 col-md-offset-2">
                         <div class="hotel-content1">
                             <div class="desc" style="justify-content: center; text-align: center;">
-                                <p><a href="./files/carta-cafe-esp-qr.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Ver Menú (Español) <i class="ti-angle-right"></i></a></p>
+                                <!--<p><a href="./files/carta-cafe-esp-qr.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Ver Menú (Español) <i class="ti-angle-right"></i></a></p>-->
+                                <p><a href="./files/menus/110722_M_CafeMX.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Ver Menú (Español) <i class="ti-angle-right"></i></a></p>
                             </div>
                         </div>
                     </div><!--Botón-->
@@ -323,6 +324,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="copyright">
+                            <small class="cursiveFont fontHover">El punto más cómodo de México.</small>
                             <p><small>&copy; Hotel Punto MX 2022<br> Todos los derechos reservados. </small> <br>
                             </p>
                         </div>
