--- a/rooms.html
+++ b/rooms.html
@@ -352,12 +352,13 @@
                         </p>
                     </div>
                 </section>
-                <!--- Deluxe Máster Suite --->
+                <!--- Máster Suite --->
                 <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse" id="anclaMS">
                     <div class="tm-right tm-slideshow tm-slideshow-highlight">
                         <img src="./assets/webp/MASTER_SUITE.jpeg" alt="Hotel PuntoMX Habitación Master Suite CDMX">
                         <img src="./assets/webp/MASTER_SUITE_3.jpeg" alt="Hotel PuntoMX Habitación Master Suite CDMX">
                         <img src="./assets/webp/MASTER_SUITE_4.jpeg" alt="Hotel PuntoMX Habitación Master Suite CDMX">
+                        <img src="assets/webp/ServiB.png" alt="Hotel PuntoMX Máster Suite CDMX Vacation">
                     </div>
                     <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
                         <h2 class="cursiveFont">Máster Suite</h2>
@@ -389,6 +390,7 @@
                         <img src="./assets/webp/SUITE_CON_TINA_3.jpeg" alt="Hotel PuntonMX Habitación con Tina Antigua CDMx">
                         <img src="./assets/webp/SUITE_CON_TINA_4.jpeg" alt="Hotel PuntonMX Habitación con Tina Antigua CDMx">
                         <img src="./assets/webp/SUITE_CON_TINA_5.jpeg" alt="Hotel PuntonMX Habitación con Tina Antigua CDMx">
+                        <img src="./assets/webp/ServiB.png" alt="Hotel PuntoMX Suite con Tina Antigua CDMX Vacation">
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
                         <h2 class="cursiveFont">Suite Tina Antigua</h2>
@@ -422,6 +424,7 @@
                         <img src="./assets/webp/SUITE_CON_JACUZZI_6.jpeg" alt="Hotel PuntoMX Suite con Jacuzzi CDMX Vacation">
                         <img src="./assets/webp/JACUZZI_2.jpeg" alt="Hotel PuntoMX Suite con Jacuzzi CDMX Vacation">
                         <img src="./assets/webp/JACUZZI_1.jpeg" alt="Hotel PuntoMX Suite con Jacuzzi CDMX Vacation">
+                        <img src="./assets/webp/ServiB.png" alt="Hotel PuntoMX Suite con Jacuzzi CDMX Vacation">
                     </div>
                     <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
                         <h2 class="cursiveFont">Suite Jacuzzi</h2>
@@ -482,6 +485,7 @@
                         <img src="./assets/webp/SUITE_CON_VISTA_1.jpeg" alt="Hotel PuntoMX Suite con Vista CDMX Vacation">
                         <img src="./assets/webp/SCV1.jpeg" alt="Hotel PuntoMX Suite con Vista CDMX Vacation">
                         <img src="./assets/webp/SCV2.jpeg" alt="Hotel PuntoMX Suite con Vista CDMX Vacation">
+                        <img src="./assets/webp/ServiB.png" alt="Hotel PuntoMX Suite con Vista CDMX Vacation">
                     </div>
                     <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
                         <h2 class="cursiveFont">Suite con vista</h2>
