--- a/menus.html
+++ b/menus.html
@@ -110,7 +110,7 @@
                                             <img class="card-img-top" src="./assets/webp/CORTE.jpeg" alt="Restaurante MX - Menú">
                                             <div class="card-body">
                                                 <h5 class="card-title cursiveFont">Restaurante MX</h5>
-                                                <a href="#" class="btn btn-primary btn-luxe-primary">Ver Menú <i class="ti-angle-right"></i></a>
+                                                <a href="./files/menus/110722_M_Restaurant.pdf" target="_blank" class="btn btn-primary btn-luxe-primary" style="font-size: 1.1rem;">Ver Menú <i class="ti-angle-right"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -119,7 +119,7 @@
                                             <img class="card-img-top" src="./assets/webp/CAFE_Y_BAGUETTE.jpeg" alt="Bebidas - Restaurante MX - Menú">
                                             <div class="card-body">
                                                 <h5 class="card-title cursiveFont">Menú de bebidas</h5>
-                                                <a href="#" class="btn btn-primary btn-luxe-primary">Ver Menú <i class="ti-angle-right"></i></a>
+                                                <a href="./files/menus/110722_M_Bebidas.pdf" target="_blank" class="btn btn-primary btn-luxe-primary" style="font-size: 1.1rem;">Ver Menú <i class="ti-angle-right"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -128,7 +128,8 @@
                                             <img class="card-img-top" src="./assets/webp/CAFE_Y_RED_VELVET.jpeg" alt="Cafe MX - Menú">
                                             <div class="card-body">
                                                 <h5 class="card-title cursiveFont">Cafe MX</h5>
-                                                <a href="#" class="btn btn-primary btn-luxe-primary">Ver Menú <i class="ti-angle-right"></i></a>
+                                                <a href="" class="btn btn-primary btn-luxe-primary" target="_blank" style="font-size: 1.1rem;">Ver Menú (Esp)<i class="ti-angle-right"></i></a>
+                                                <a href="" class="btn btn-primary btn-luxe-primary" target="_blank" style="font-size: 1.1rem;">Ver Menú (Eng)<i class="ti-angle-right"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -137,7 +138,7 @@
                                             <img class="card-img-top" src="./assets/webp/ROOM_SERVICE_2.jpeg" alt="Restaurante MX - Menú">
                                             <div class="card-body">
                                                 <h5 class="card-title cursiveFont">Room Service</h5>
-                                                <a href="#" class="btn btn-primary btn-luxe-primary">Ver Menú <i class="ti-angle-right"></i></a>
+                                                <a href="./files/menus/110722_M_RoomService.pdf" target="_blank" class="btn btn-primary btn-luxe-primary" style="font-size: 1.1rem;" >Ver Menú <i class="ti-angle-right"></i></a>
                                             </div>
                                         </div>
                                     </div>
