--- a/rooms.html
+++ b/rooms.html
@@ -336,8 +336,12 @@
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
                         <h2 class="cursiveFont">Deluxe Dos Camas Matrimoniales</h2>
-                        <p style="color:#FFF;">Ideal para viajes en familia, con capacidad para alojar hasta cuatro personas. Cuenta con vista al
+                        <p style="margin-bottom:0!important; color:#FFF;">Ideal para viajes en familia, con capacidad para alojar hasta cuatro personas. Cuenta con vista al
                             interior del hotel y ventana fija, televisor de 28 pulgadas.<br> <small></small></p>
+                        <ul class="text-white" style="font-size: 1.4rem; list-style: none; padding-left: 0;">
+                            <li>*Accesible para mascotas (Enviar mensaje para confirmar servicio)</li>
+                            <li>*Disponibilidad de cunas (Enviar mensaje para confirmar servicio)</li>
+                        </ul>
                         <p>
                             <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">
                                 Reserva aquí<i class="ti-angle-right"></i>
@@ -433,7 +437,7 @@
                             con televisor de 38 pulgadas.</p>
                         <ul class="text-white" style="font-size: 1.4rem; list-style: none; padding-left: 0;">
                             <li>*Servibar en cortesía</li>
-                            <li>*Accesible para mascotas</li>
+                            <!--<li>*Accesible para mascotas</li>-->
                         </ul>
                         <p>
                             <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-second btn-luxe-second">
