Resolviendo conflictos con merge

--- a/rooms.html
+++ b/rooms.html
@@ -694,20 +694,14 @@
                                 Reserva aquí <i class="ti-angle-right"></i>
                             </a>
                             <!----Iconos--->
-                            <i class="fa-solid fa-paw fontIconS" data-toggle="tooltip" data-placement="top"
-                               title="Habitación PetFriendly"></i>
-                            <i class="fa-solid fa-wifi fontIconS" data-toggle="tooltip" data-placement="top"
-                               title="Wifi"></i>
-                            <i class="fa-solid fa-coffee fontIconS" data-toggle="tooltip" data-placement="top"
-                               title="Cafetera"></i>
-                            <i class="fa-solid fa-vault fontIconS" data-toggle="tooltip" data-placement="top"
-                               title="Caja fuerte"></i>
-                            <i class="fa-solid fa-tv fontIconS" data-toggle="tooltip" data-placement="top"
-                               title="Smart TV"></i>
-                            <i class="fa-solid fa-temperature-low fontIconS " data-toggle="tooltip" data-placement="top"
-                               title="Aire acondicionado"></i>
-                            <i class="fa-solid fa-wheelchair fontIconS " data-toggle="tooltip" data-placement="top"
-                               title="Accesible para silla de ruedas"></i>
+                            <i class="fa-solid fa-paw fontIconS" data-toggle="tooltip" data-placement="top" title="Habitación PetFriendly"></i>
+                            <i class="fa-solid fa-wifi fontIconS" data-toggle="tooltip" data-placement="top" title="Wifi"></i>
+                            <i class="fa-solid fa-coffee fontIconS" data-toggle="tooltip" data-placement="top" title="Cafetera"></i>
+                            <i class="fa-solid fa-vault fontIconS" data-toggle="tooltip" data-placement="top" title="Caja fuerte"></i>
+                            <i class="fa-solid fa-tv fontIconS" data-toggle="tooltip" data-placement="top" title="Smart TV"></i>
+                            <i class="fa-solid fa-temperature-low fontIconS " data-toggle="tooltip" data-placement="top" title="Aire acondicionado"></i>
+                            <i class="fa-solid fa-temperature-low fontIconS" data-toggle="tooltip" data-placement="top" title="Aire acondicionado"></i>
+                            <i class="fa-solid fa-wheelchair fontIconS" data-toggle="tooltip" data-placement="top" title="Aire acondicionado"></i>
                         </p>
                     </div>
                 </section>
