--- a/rooms.html
+++ b/rooms.html
@@ -467,6 +467,7 @@
                         <ul class="text-white" style="font-size: 1.4rem; list-style: none; padding-left: 0;">
                             <li>*Disponibilidad de cunas</li>
                             <li>*Accesible para mascotas</li>
+                            <li>*Accesible para silla de ruedas</li>
                         </ul>
                         <p>
                             <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">
@@ -479,6 +480,7 @@
                             <i class="fa-solid fa-vault fontIconS" data-toggle="tooltip" data-placement="top" title="Caja fuerte"></i>
                             <i class="fa-solid fa-tv fontIconS" data-toggle="tooltip" data-placement="top" title="Smart TV"></i>
                             <i class="fa-solid fa-temperature-low fontIconS " data-toggle="tooltip" data-placement="top" title="Aire acondicionado"></i>
+                            <i class="fa-solid fa-wheelchair fontIconS " data-toggle="tooltip" data-placement="top" title="Accesible para silla de ruedas"></i>
                         </p>
                     </div>
                 </section>
