--- a/rooms.html
+++ b/rooms.html
@@ -455,9 +455,14 @@
                 <!--- Junior Suite --->
                 <section class="tm-slideshow-section" id="anclaJS">
                     <div class="tm-slideshow">
-                        <img src="./assets/webp/DELUXE_2_CAMAS.jpeg" alt="Hotel PuntoMX Habitación Junior Suite  CDMX Vacation">
-                        <img src="./assets/webp/DELUXE_2_CAMAS_2.jpeg" alt="Hotel PuntoMX Habitación Junior Suite  CDMX Vacation">
-                        <img src="./assets/webp/DELUXE_2_CAMAS_3.jpeg" alt="Hotel PuntoMX Habitación Junior Suite  CDMX Vacation">
+                        <img src="./assets/webp/JR_SUITEHABITACION.jpg" alt="Hotel PuntoMX Habitación Junior Suite  CDMX Vacation">
+                        <img src="./assets/webp/JR_SUITE_ACCESO_SILLA_RUEDA.jpg" alt="Hotel PuntoMX Habitación Junior Suite  CDMX Vacation">
+                        <img src="./assets/webp/JR_SUITTE_REGADERA.jpg" alt="Hotel PuntoMX Habitación Junior Suite  CDMX Vacation">
+                        <img src="./assets/webp/JR_SUITE_HAB_SILLA_RUEDAS_1.jpg" alt="Hotel PuntoMX Habitación Junior Suite  CDMX Vacation">
+                        <img src="./assets/webp/JR_SUITE_HAB_SILLA_RUEDA.jpg" alt="Hotel PuntoMX Habitación Junior Suite  CDMX Vacation">
+                        <img src="./assets/webp/JR_SUITE_Banio.jpg" alt="Hotel PuntoMX Habitación Junior Suite  CDMX Vacation">
+                        <img src="./assets/webp/JR_SUITE_Banio_2.jpg" alt="Hotel PuntoMX Habitación Junior Suite  CDMX Vacation">
+                        <img src="./assets/webp/JR_SUITEHABITACION_2.jpg" alt="Hotel PuntoMX Habitación Junior Suite  CDMX Vacation">
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
                         <h2 class="cursiveFont">Junior Suite</h2>
