--- a/rooms.html
+++ b/rooms.html
@@ -492,10 +492,10 @@
                 <!--- Suite con Vista --->
                 <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse" id="anclaSV">
                     <div class="tm-right tm-slideshow tm-slideshow-highlight">
-                        <img src="./assets/webp/SUITE_CON_VISTA.jpeg" alt="Hotel PuntoMX Suite con Vista CDMX Vacation">
-                        <img src="./assets/webp/SUITE_CON_VISTA_1.jpeg" alt="Hotel PuntoMX Suite con Vista CDMX Vacation">
-                        <img src="./assets/webp/SCV1.jpeg" alt="Hotel PuntoMX Suite con Vista CDMX Vacation">
-                        <img src="./assets/webp/SCV2.jpeg" alt="Hotel PuntoMX Suite con Vista CDMX Vacation">
+                        <img src="./assets/webp/SCVISTA.jpg" alt="Hotel PuntoMX Suite con Vista CDMX Vacation">
+                        <img src="./assets/webp/SCVISTA_1.jpg" alt="Hotel PuntoMX Suite con Vista CDMX Vacation">
+                        <img src="./assets/webp/SVC_Closet.png" alt="Hotel PuntoMX Suite con Vista CDMX Vacation">
+                        <img src="./assets/webp/SCVISTA_2.jpg" alt="Hotel PuntoMX Suite con Vista CDMX Vacation">
                         <img src="./assets/webp/ServiB.jpeg" alt="Hotel PuntoMX Suite con Vista CDMX Vacation">
                     </div>
                     <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
