--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
           </div>
           <!----Junior Suite - Normal---->
           <div class="feature-full-1col">
-            <div class="image" style="background-image: url(https://media.xmlcal.com/pic/p0003/6868/85.png);">
+            <div class="image" style="background-image: url(./assets/webp/JR_SUITEHABITACION.jpg);">
               <div class="descrip text-center">
                 <p><small>Reserva por</small><span>$1,380.76/noche</span></p>
               </div>
@@ -513,7 +513,7 @@
           </div>
           <!----Suite con Vista - Reverse---->
           <div class="feature-full-1col" style="flex-direction: row-reverse;">
-            <div class="image" style="background-image: url(./assets/webp/SUITE_CON_VISTA.jpeg);">
+            <div class="image" style="background-image: url(./assets/webp/SCVISTA_2.jpg);">
               <div class="descrip text-center">
                 <p><small>Reserva por</small><span>$??/noche</span></p>
               </div>
