--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
           <div class="feature-full-1col" style="flex-direction: row-reverse;">
             <div class="image" style="background-image: url(./assets/webp/SCVISTA_1.jpg);">
               <div class="descrip text-center">
-                <p><small>Reserva por</small><span>$??/noche</span></p>
+                <p><small>Reserva por</small><span>$1,434.00/noche</span></p>
               </div>
             </div>
             <div class="desc">
