Actualización Agosto - Promociones restaurante

--- a/restaurant.html
+++ b/restaurant.html
@@ -311,16 +311,16 @@
             <div class="slider">
               <ul>
                 <li>
-                  <img src="./assets/proms/prom_1.jpeg" alt="">
+                  <img src="./assets/proms/PromoSeptiembre_1.jpeg" alt="">
                 </li>
                 <li>
-                  <img src="./assets/proms/prom_1.jpeg" alt="">
+                  <img src="./assets/proms/PromoSeptiembre_2.jpeg" alt="">
                 </li>
                 <li>
-                  <img src="./assets/proms/prom_2.jpeg" alt="">
+                  <img src="./assets/proms/PromoSeptiembre_3.jpeg" alt="">
                 </li>
                 <li>
-                  <img src="./assets/proms/prom_2.jpeg" alt="">
+                  <img src="./assets/proms/PromoSeptiembre_1.jpeg" alt="">
                 </li>
               </ul>
             </div>
