Actualización Agosto - versión en inglés

--- a/cdmx.html
+++ b/cdmx.html
@@ -236,6 +236,7 @@
                                     <li><a href="cdmx.html" class="active">Conoce la CDMX</a></li>
                                     <!--<li><a href="blog.html">Blog</a></li>-->
                                     <li><a href="contact.html">Contacto</a></li>
+                                    <li><a href="https://hotelespuntomx-com.translate.goog/cdmx.html?_x_tr_sl=es&_x_tr_tl=en&_x_tr_hl=es&_x_tr_pto=wapp" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
                                 </ul>
                             </nav>
                         </a>
