--- a/contact.html
+++ b/contact.html
@@ -228,7 +228,8 @@
                 </li>
                 <li><a href="cdmx.html">Conoce la CDMX</a></li>
                 <!--<li><a href="blog.html">Blog</a></li>-->
-                <li><a href="contact.html" class="active">Contacto</a></li>
+                <li><a href="#" class="active">Contacto</a></li>
+                <li><a href="https://hotelespuntomx-com.translate.goog/contact.html?_x_tr_sl=es&_x_tr_tl=en&_x_tr_hl=es&_x_tr_pto=wapp" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
               </ul>
             </nav>
           </div>
