--- a/menus.html
+++ b/menus.html
@@ -73,9 +73,9 @@
                 <div class="container">
                     <div class="nav-header">
                         <h1 id="fh5co-logo"><a href="index.html"><img src="assets/logos/puntomx_ico.ico" alt="Logo de Hoteles Punto MX" height="80px" srcset=""></a></h1>
-                        <!--<nav id="fh5co-menu-wrap" role="navigation">
+                        <nav id="fh5co-menu-wrap" role="navigation">
                             <ul class="sf-menu" id="fh5co-primary-menu">
-                                <li><a class="active" href="index.html">Inicio</a></li>
+                                <!--<li><a class="active" href="index.html">Inicio</a></li>
                                 <li>
                                     <a href="#" class="fh5co-sub-ddown">Hotel</a>
                                     <ul class="fh5co-sub-menu">
@@ -86,9 +86,10 @@
                                     </ul>
                                 </li>
                                 <li><a href="cdmx.html">Conoce la CDMX</a></li>
-                                <li><a href="contact.html">Contacto</a></li>
+                                <li><a href="contact.html">Contacto</a></li>-->
+                                <li><a href="https://hotelespuntomx-com.translate.goog/menus.html?_x_tr_sl=es&_x_tr_tl=en&_x_tr_hl=es&_x_tr_pto=wapp" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
                             </ul>
-                        </nav>-->
+                        </nav>
                     </div>
                 </div>
             </header>
