Actualización de Restaurante Agosto - 4 imgs

--- a/restaurant.html
+++ b/restaurant.html
@@ -321,7 +321,16 @@
                   <img src="./assets/proms/PromoSeptiembre_3.jpeg" alt="">
                 </li>
                 <li>
-                  <img src="./assets/proms/PromoSeptiembre_1.jpeg" alt="">
+                  <img src="./assets/res/lunes_rs.jpeg" alt="">
+                </li>
+                <li>
+                  <img src="./assets/res/martes_rs.jpeg" alt="">
+                </li>
+                <li>
+                  <img src="./assets/res/miercoles_rs.jpeg" alt="">
+                </li>
+                <li>
+                  <img src="./assets/res/jueves_rs.jpeg" alt="">
                 </li>
               </ul>
             </div>
