--- a/restaurant.html
+++ b/restaurant.html
@@ -36,6 +36,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/slider.css">
   <link rel="stylesheet" href="css/mybtn_flot.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script src="js/modernizr-2.6.2.min.js"></script>
 </head>
 <body class="mybody">
@@ -288,51 +289,66 @@
             <div class="section-title text-center" style="margin-bottom: 30px;">
               <h2>Galería</h2>
             </div>
-            <div class="slider">
-              <ul>
-                <li>
-                  <img src="./assets/webp/ALITAS.jpeg" alt="">
-                </li>
-                <li>
-                  <img src="./assets/webp/AUGACHILE.jpeg" alt="">
-                </li>
-                <li>
-                  <img src="./assets/webp/CORTE.jpeg" alt="">
-                </li>
-                <li>
-                  <img src="./assets/webp/SALMON.jpeg" alt="">
-                </li>
-              </ul>
+            <div id="carouselGaleria" class="carousel slide" data-ride="carousel" data-interval="3000">
+              <!--<ol class="carousel-indicators">
+                  <li data-target="#carouselGaleria" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselGaleria" data-slide-to="1"></li>
+                  <li data-target="#carouselGaleria" data-slide-to="2"></li>
+                  <li data-target="#carouselGaleria" data-slide-to="3"></li>
+              </ol>-->
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="./assets/webp/ALITAS.jpeg" alt="Platillo HotelPuntoMX1">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./assets/webp/AUGACHILE.jpeg" alt="Platillo HotelPuntoMX2">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./assets/webp/CORTE.jpeg" alt="Platillo HotelPuntoMX3">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./assets/webp/SALMON.jpeg" alt="Platillo HotelPuntoMX3">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselGaleria" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselGaleria" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="section-title text-center" style="margin-bottom: 30px;">
               <h2>Promociones</h2>
             </div>
-            <div class="slider">
-              <ul>
-                <li>
-                  <img src="./assets/proms/PromoSeptiembre_1.jpeg" alt="">
-                </li>
-                <li>
-                  <img src="./assets/proms/PromoSeptiembre_2.jpeg" alt="">
-                </li>
-                <li>
-                  <img src="./assets/proms/PromoSeptiembre_3.jpeg" alt="">
-                </li>
-                <li>
-                  <img src="./assets/res/lunes_rs.jpeg" alt="">
-                </li>
-                <li>
-                  <img src="./assets/res/martes_rs.jpeg" alt="">
-                </li>
-                <li>
-                  <img src="./assets/res/miercoles_rs.jpeg" alt="">
-                </li>
-                <li>
-                  <img src="./assets/res/jueves_rs.jpeg" alt="">
-                </li>
-              </ul>
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="4000">
+              <!--<ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              </ol>-->
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="./assets/proms/PromoSeptiembre_1.jpeg" alt="Promo Septiembre 1">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./assets/proms/PromoSeptiembre_2.jpeg" alt="Promo Septiembre 2">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./assets/proms/PromoSeptiembre_3.jpeg" alt="Promo Septiembre 3">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
           </div>
         </div>
@@ -348,7 +364,7 @@
         <div class="row">
           <div class="col-md-3">
             <div class="copyright">
-                <small class="cursiveFont fontHover">El punto más cómodo de México.</small>
+              <small class="cursiveFont fontHover">El punto más cómodo de México.</small>
               <p><small>&copy; Hotel Punto MX 2022<br> Todos los derechos reservados. </small> <br>
               </p>
             </div>
@@ -356,7 +372,7 @@
           <div class="col-md-6">
             <div class="row">
               <div class="col-md-6">
-                
+
                 <ul class="link">
                   <li><a href="#" data-toggle="modal" data-target="#aboutUs">Acerca de Nosotros</a></li>
                   <li><a href="#" data-toggle="modal" data-target="#sucursalH">Sucursal</a></li>
@@ -402,14 +418,16 @@
 
   </div>
   <!-- END fh5co-page -->
-
 </div>
 
 <!-- Javascripts -->
-<script src="js/jquery-2.1.4.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!--<script src="js/jquery-2.1.4.min.js"></script>-->
 <script src="js/hoverIntent.js"></script>
 <script src="js/superfish.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<!--<script src="js/bootstrap.min.js"></script>-->
 <script src="js/jquery.waypoints.min.js"></script>
 <script src="js/jquery.countTo.js"></script>
 <script src="js/jquery.stellar.min.js"></script>
