--- a/restaurant.html
+++ b/restaurant.html
@@ -340,6 +340,18 @@
                 <div class="carousel-item">
                   <img class="d-block w-100" src="./assets/proms/PromoSeptiembre_3.jpeg" alt="Promo Septiembre 3">
                 </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./assets/proms/promo_lunes.jpeg" alt="Promo Septiembre 2">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./assets/proms/promo_martes.jpeg" alt="Promo Septiembre 3">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./assets/proms/Promo_uno.jpeg" alt="Promo Septiembre 2">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./assets/proms/promo_jueves.jpeg" alt="Promo Septiembre 3">
+                </div>
               </div>
               <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
