--- a/index.html
+++ b/index.html
@@ -210,21 +210,14 @@
 </div>
 <!------------>
 <!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
+<div class="modal fade" id="myModalPromSept" tabindex="-1" role="dialog" aria-labelledby="promoSept" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+      <div class="modal-body">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <img src="./assets/proms/promo15S.jpeg" class="img-fluid" alt="Promoción 15 de Septiembre">
       </div>
     </div>
   </div>
@@ -300,6 +293,9 @@
                 </div>
               </div>
             </div>
+          </li>
+          <li style="background-image: url(./assets/proms/promo15S.jpeg); background-size: contain;">
+            <div class="overlay-gradient"></div>
           </li>
           <li style="background-image: url(assets/webp/paquetes_especiales.jpeg);">
             <div class="overlay-gradient"></div>
@@ -864,5 +860,10 @@
 <script src="js_t/jquery.singlePageNav.min.js"></script>
 <script src="js/jquery.flexslider-min.js"></script>
 <script src="js/custom.js"></script>
+<script>
+  $(document).ready(function() {
+    $('#myModalPromSept').modal('show')
+  });
+</script>
 </body>
 </html>
