--- a/restaurant.html
+++ b/restaurant.html
@@ -331,7 +331,7 @@
                   <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
               </ol>-->
               <div class="carousel-inner">
-                <div class="carousel-item active">
+                <!--<div class="carousel-item active">
                   <img class="d-block w-100" src="./assets/proms/PromoSeptiembre_1.jpeg" alt="Promo Septiembre 1">
                 </div>
                 <div class="carousel-item">
@@ -339,8 +339,8 @@
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="./assets/proms/PromoSeptiembre_3.jpeg" alt="Promo Septiembre 3">
-                </div>
-                <div class="carousel-item">
+                </div>-->
+                <div class="carousel-item active">
                   <img class="d-block w-100" src="./assets/proms/promo_lunes.jpeg" alt="Promo Septiembre 2">
                 </div>
                 <div class="carousel-item">
