--- a/restaurant.html
+++ b/restaurant.html
@@ -25,6 +25,25 @@
   <link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">
   <!-----------------------FONT AWESOME--------------------->
   <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
+  <!-------------------->
+  <link rel="stylesheet" href="css/superfish.css">
+  <link rel="stylesheet" href="css/bootstrap-datepicker.min.css">
+  <link rel="stylesheet" href="css/cs-select.css">
+  <link rel="stylesheet" href="css/cs-skin-border.css">
+  <link rel="stylesheet" href="css/themify-icons.css">
+  <link rel="stylesheet" href="css/flaticon.css">
+  <link rel="stylesheet" href="css/icomoon.css">
+  <link rel="stylesheet" href="css/flexslider.css">
+  <link rel="stylesheet" href="css/mybtn_flot.css">
+  <!--------------------------------->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/datepicker.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+  <link rel="stylesheet" href="css/t-style.css">
+  <link rel="stylesheet" href="css/style.css">
+  <!--------------------------------->
+  <!--
   <link rel="stylesheet" href="css/superfish.css">
   <link rel="stylesheet" href="css/bootstrap-datepicker.min.css">
   <link rel="stylesheet" href="css/cs-select.css">
@@ -36,7 +55,10 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/slider.css">
   <link rel="stylesheet" href="css/mybtn_flot.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  -->
   <script src="js/modernizr-2.6.2.min.js"></script>
 </head>
 <body class="mybody">
@@ -218,7 +240,7 @@
               <ul class="sf-menu" id="fh5co-primary-menu">
                 <li><a href="index.html">Inicio</a></li>
                 <li>
-                  <a href="#" class="active" class="fh5co-sub-ddown">Hotel</a>
+                  <a href="#" class="fh5co-sub-ddown active">Hotel</a>
                   <ul class="fh5co-sub-menu">
                     <li><a href="rooms.html">Habitaciones</a></li>
                     <li><a href="services.html">Servicios & Amenidades</a></li>
@@ -230,13 +252,12 @@
                 <li><a href="cdmx.html">Conoce la CDMX</a></li>
                 <!--<li><a href="blog.html">Blog</a></li>-->
                 <li><a href="contact.html">Contacto</a></li>
-                <li><a href="https://hotelespuntomx-com.translate.goog/restaurant.html?_x_tr_sl=es&_x_tr_tl=en&_x_tr_hl=es&_x_tr_pto=wapp" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
+                <li><a href="https://hotelespuntomx-com.translate.goog/cafe.html?_x_tr_sl=es&_x_tr_tl=en&_x_tr_hl=es&_x_tr_pto=wapp" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
               </ul>
             </nav>
           </div>
         </div>
       </header>
-
     </div>
     <!-- end:fh5co-header -->
     <div class="fh5co-parallax" style="background: linear-gradient( rgba(0, 0, 0, 0.4) 100%, rgba(0, 0, 0, 0.2)100%),url(./assets/webp/CORTE.jpeg); background-size: contain, cover; background-position: 0 bottom,0 bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
@@ -433,12 +454,22 @@
 </div>
 
 <!-- Javascripts -->
+<!--<script src="js/jquery-2.1.4.min.js"></script>-->
+<script src="js_t/jquery-1.11.3.min.js"></script>
+<script src="js/hoverIntent.js"></script>
+<script src="js/superfish.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
+<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="js/bootstrap.min.js"></script>
+<!--
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+-->
 <!--<script src="js/jquery-2.1.4.min.js"></script>-->
-<script src="js/hoverIntent.js"></script>
-<script src="js/superfish.js"></script>
+<!--<script src="js/hoverIntent.js"></script>
+<script src="js/superfish.js"></script>-->
 <!--<script src="js/bootstrap.min.js"></script>-->
 <script src="js/jquery.waypoints.min.js"></script>
 <script src="js/jquery.countTo.js"></script>
