--- a/restaurant.html
+++ b/restaurant.html
@@ -362,6 +362,12 @@
                   <img class="d-block w-100" src="./assets/proms/PromoSeptiembre_3.jpeg" alt="Promo Septiembre 3">
                 </div>-->
                 <div class="carousel-item active">
+                  <img class="d-block w-100" src="./assets/proms/prom_1.jpeg" alt="Promo Septiembre 2">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="./assets/proms/prom_2.jpeg" alt="Promo Septiembre 2">
+                </div>
+                <div class="carousel-item">
                   <img class="d-block w-100" src="./assets/proms/promo_lunes.jpeg" alt="Promo Septiembre 2">
                 </div>
                 <div class="carousel-item">
