--- a/cafe.html
+++ b/cafe.html
@@ -27,6 +27,7 @@
     <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/superfish.css">
     <link rel="stylesheet" href="css/bootstrap-datepicker.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/cs-select.css">
     <link rel="stylesheet" href="css/cs-skin-border.css">
     <link rel="stylesheet" href="css/themify-icons.css">
@@ -229,7 +230,8 @@
                                 <li><a href="cdmx.html">Conoce la CDMX</a></li>
                                 <!--<li><a href="blog.html">Blog</a></li>-->
                                 <li><a href="contact.html">Contacto</a></li>
-                                <li><a href="https://hotelespuntomx-com.translate.goog/cafe.html?_x_tr_sl=es&_x_tr_tl=en&_x_tr_hl=es&_x_tr_pto=wapp" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
+                                <!--<li><a href="https://hotelespuntomx-com.translate.goog/cafe.html?_x_tr_sl=es&_x_tr_tl=en&_x_tr_hl=es&_x_tr_pto=wapp" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>-->
+                                <li><a href="./eng/cafe.html" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -298,21 +300,23 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="slider">
-                        <ul>
-                            <li>
-                                <img src="./assets/webp/CAFE_Y_BAGUETTE.jpeg" alt="">
-                            </li>
-                            <li>
-                                <img src="./assets/webp/CAFE_Y_RED_VELVET.jpeg" alt="">
-                            </li>
-                            <li>
-                                <img src="./assets/webp/CAFE_Y_BAGUETTE.jpeg" alt="">
-                            </li>
-                            <li>
-                                <img src="./assets/webp/CAFE_Y_RED_VELVET.jpeg" alt="">
-                            </li>
-                        </ul>
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="4000">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="./assets/webp/CAFE_Y_BAGUETTE.jpeg" alt="Cafe MX">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="./assets/webp/CAFE_Y_RED_VELVET.jpeg" alt="Cafe MX">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -381,8 +385,11 @@
 
 <!-- Javascripts -->
 <script src="js/jquery-2.1.4.min.js"></script>
+<!--<script src="js_t/jquery-1.11.3.min.js"></script>-->
 <script src="js/hoverIntent.js"></script>
 <script src="js/superfish.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.waypoints.min.js"></script>
 <script src="js/jquery.countTo.js"></script>
