--- a/ng/cafe.html
+++ b/ng/cafe.html
@@ -328,7 +328,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="copyright">
-                            <small class="cursiveFont fontHover">El punto más cómodo de México.</small>
+                            <small class="cursiveFont fontHover">The most comfortable point in Mexico.</small>
                             <p><small>&copy; Hotel Punto MX 2022<br> All rights reserved. </small> <br>
                             </p>
                         </div>
