--- a/rooms.html
+++ b/rooms.html
@@ -239,7 +239,7 @@
                                     <li><a href="cdmx.html">Conoce la CDMX</a></li>
                                     <!--<li><a href="blog.html">Blog</a></li>-->
                                     <li><a href="contact.html">Contacto</a></li>
-                                    <li><a href="https://hotelespuntomx-com.translate.goog/rooms.html?_x_tr_sl=es&_x_tr_tl=en&_x_tr_hl=es&_x_tr_pto=wapp" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
+                                    <li><a href="./ng/rooms.html" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
                                 </ul>
                             </nav>
                         </a>
