Sitio versión inglés Services

--- a/services.html
+++ b/services.html
@@ -244,7 +244,7 @@
                                 <li><a href="cdmx.html">Conoce la CDMX</a></li>
                                 <!--<li><a href="blog.html">Blog</a></li>-->
                                 <li><a href="contact.html">Contacto</a></li>
-                                <li><a href="https://hotelespuntomx-com.translate.goog/services.html?_x_tr_sl=es&_x_tr_tl=en&_x_tr_hl=es&_x_tr_pto=wapp" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
+                                <li><a href="./ng/services.html" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
                             </ul>
                         </nav>
                     </div>
