Sitio versión inglés Restaurante

--- a/ng/services.html
+++ b/ng/services.html
@@ -229,14 +229,14 @@
                         <h1 id="fh5co-logo"><a href="index.html"><img src="assets/logos/puntomx_ico.ico" alt="Logo de Hoteles Punto MX" height="80px" srcset=""></a></h1>
                         <nav id="fh5co-menu-wrap" role="navigation">
                             <ul class="sf-menu" id="fh5co-primary-menu">
-                                <li><a href="#">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li>
                                     <a href="#" class="fh5co-sub-ddown active">Hotel</a>
                                     <ul class="fh5co-sub-menu">
                                         <li><a href="rooms.html">Rooms</a></li>
                                         <li><a class="active" href="#">Services & Amenities</a></li>
                                         <li><a href="restaurant.html">Restaurant MX</a></li>
-                                        <li><a class="active" href="cafe.html">Café MX</a></li>
+                                        <li><a href="cafe.html">Café MX</a></li>
                                         <li><a href="roomservice.html">Room Service</a></li>
                                     </ul>
                                 </li>
