--- a/ng/restaurant.html
+++ b/ng/restaurant.html
@@ -218,21 +218,20 @@
             <h1 id="fh5co-logo"><a href="index.html"><img src="assets/logos/puntomx_ico.ico" alt="Logo de Hoteles Punto MX" height="80px" srcset=""></a></h1>
             <nav id="fh5co-menu-wrap" role="navigation">
               <ul class="sf-menu" id="fh5co-primary-menu">
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="#">Home</a></li>
                 <li>
                   <a href="#" class="fh5co-sub-ddown active">Hotel</a>
                   <ul class="fh5co-sub-menu">
-                    <li><a href="rooms.html">Habitaciones</a></li>
-                    <li><a href="services.html">Servicios & Amenidades</a></li>
-                    <li><a class="active" href="restaurant.html">Restaurante MX</a></li>
-                    <li><a href="cafe.html">Café MX</a></li>
+                    <li><a href="rooms.html">Rooms</a></li>
+                    <li><a href="services.html">Services & Amenities</a></li>
+                    <li><a class="active" href="restaurant.html">Restaurant MX</a></li>
+                    <li><a class="active" href="cafe.html">Café MX</a></li>
                     <li><a href="roomservice.html">Room Service</a></li>
                   </ul>
                 </li>
-                <li><a href="cdmx.html">Conoce la CDMX</a></li>
-                <!--<li><a href="blog.html">Blog</a></li>-->
-                <li><a href="contact.html">Contacto</a></li>
-                <li><a href="https://hotelespuntomx-com.translate.goog/cafe.html?_x_tr_sl=es&_x_tr_tl=en&_x_tr_hl=es&_x_tr_pto=wapp" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
+                <li><a href="cdmx.html">Meet CDMX</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="../restaurant.html" target="_self">Esp</a></li>
               </ul>
             </nav>
           </div>
@@ -246,7 +245,7 @@
         <div class="row">
           <div class="col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
             <div class="fh5co-intro fh5co-table-cell">
-              <p>Vive el sabor de la CDMX en nuestro</p>
+              <p>Live the taste of the CDMX in our</p>
               <h1 class="text-center">Restaurante MX</h1>
             </div>
           </div>
@@ -255,7 +254,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="mybtn-flotante text-rsv">Reserva aquí</a>
+        <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="mybtn-flotante text-rsv">Book here</a>
         <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank" class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
       </div>
     </div>
@@ -265,16 +264,16 @@
         <div class="row">
           <div class="col-12 text-center myc" >
             <img src="./assets/logos/restaurante_calado.webp" alt="Logo en blanco del Restaurante MX" style="max-width: 90%;">
-            <p class="fh5co-counter-label" style="color: var(--white); text-transform: none; font-size: 1.5rem; letter-spacing: normal;">México es un país que ofrece una gran variedad de platillos y bebidas hechos con un sin fin de ingredientes que, por su sabor, olor, textura y presentación, pueden enamorar a cualquiera en Punto MX somos sin duda el lugar ideal para visitar, usamos ingredientes frescos en formas imaginativas y creativas para servirte los mejores platillos de la zona, bajo un acogedor ambiente familiar. Y sin duda con un excelente servicio, siempre recibiéndote con una agradable sonrisa y excelente actitud.</p>
-            <p class="fh5co-counter-label" style="color: var(--white); text-transform: none; font-size: 1.5rem; letter-spacing: normal;">Si nos visitas a la hora del desayuno, podrás servirte de un variado buffet; y si piensas en la comida o en la cena, podrás ordenar a la carta todos los días.</p>
+            <p class="fh5co-counter-label" style="color: var(--white); text-transform: none; font-size: 1.5rem; letter-spacing: normal;">Mexico is a country that offers a wide variety of dishes and drinks made with endless ingredients that, due to their taste, smell, texture and presentation, can make anyone fall in love at Punto MX we are without a doubt the ideal place to visit, we use fresh ingredients in imaginative and creative ways to serve you the best dishes in the area, under a cozy family atmosphere. And without a doubt with an excellent service, always welcoming you with a pleasant smile and an excellent attitude.</p>
+            <p class="fh5co-counter-label" style="color: var(--white); text-transform: none; font-size: 1.5rem; letter-spacing: normal;">If you visit us on time for breakfast, you can help yourself to a varied buffet; And if you think about lunch or dinner, you can order a la carte every day.</p>
           </div>
 
           <!--Botón-->
           <div class="col-md-4 col-md-offset-4">
             <div class="hotel-content1">
               <div class="desc" style="justify-content: center; text-align: center;">
-                <p><a href="./files/menus/110722_M_Restaurant.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Ver Menú <i class="ti-angle-right"></i></a></p>
-                <p><a href="./files/menus/110722_M_Bebidas.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Ver Bebidas<i class="ti-angle-right"></i></a></p>
+                <p><a href="./files/menus/110722_M_Restaurant.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">See menu <i class="ti-angle-right"></i></a></p>
+                <p><a href="./files/menus/110722_M_Bebidas.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">See drinks<i class="ti-angle-right"></i></a></p>
               </div>
             </div>
           </div>
@@ -288,7 +287,7 @@
         <div class="row" style="">
           <div class="col-lg-6 col-md-6 col-sm-12" style="min-height: auto; align-self: center;">
             <div class="section-title text-center" style="margin-bottom: 30px;">
-              <h2>Galería</h2>
+              <h2>Gallery</h2>
             </div>
             <div id="carouselGaleria" class="carousel slide" data-ride="carousel" data-interval="3000">
               <!--<ol class="carousel-indicators">
@@ -323,7 +322,7 @@
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
             <div class="section-title text-center" style="margin-bottom: 30px;">
-              <h2>Promociones</h2>
+              <h2>Promos</h2>
             </div>
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="4000">
               <!--<ol class="carousel-indicators">
@@ -383,20 +382,19 @@
         <div class="row">
           <div class="col-md-3">
             <div class="copyright">
-              <small class="cursiveFont fontHover">El punto más cómodo de México.</small>
-              <p><small>&copy; Hotel Punto MX 2022<br> Todos los derechos reservados. </small> <br>
+              <small class="cursiveFont fontHover">The most comfortable point in Mexico.</small>
+              <p><small>&copy; Hotel Punto MX 2022<br> All rights reserved. </small> <br>
               </p>
             </div>
           </div>
           <div class="col-md-6">
             <div class="row">
               <div class="col-md-6">
-
                 <ul class="link">
-                  <li><a href="#" data-toggle="modal" data-target="#aboutUs">Acerca de Nosotros</a></li>
-                  <li><a href="#" data-toggle="modal" data-target="#sucursalH">Sucursal</a></li>
-                  <li><a href="#" data-toggle="modal" data-target="#bolsaTrabajo">Bolsa de Trabajo</a></li>
-                  <li><a href="#" data-toggle="modal" data-target="#avisoPrivacidad">Aviso de Privacidad</a></li>
+                  <li><a href="#" data-toggle="modal" data-target="#aboutUs">About Us</a></li>
+                  <li><a href="#" data-toggle="modal" data-target="#sucursalH">Branch office</a></li>
+                  <li><a href="#" data-toggle="modal" data-target="#bolsaTrabajo">Job bank</a></li>
+                  <li><a href="#" data-toggle="modal" data-target="#avisoPrivacidad">Privacy Notice</a></li>
                 </ul>
               </div>
               <div class="col-md-6">
@@ -404,7 +402,7 @@
                 <ul class="link">
                   <li><a href="restaurant.html">Resturant MX</a></li>
                   <li><a href="cafe.html">Café MX</a></li>
-                  <li><a href="index.html#parking-tab">Estacionamiento</a></li>
+                  <li><a href="index.html#parking-tab">Parking</a></li>
                   <li><a href="index.html#pet-tab">Pet Friendly</a></li>
                 </ul>
               </div>
@@ -417,7 +415,9 @@
                 <a class="circle_element" href="https://www.facebook.com/HotelPuntoMX/" target="_blank"><i class="fa-brands fa-facebook" style="color: #000;"></i></a>
                 <a class="circle_element" href="https://www.instagram.com/hotelpuntomx/" target="_blank"><i class="fa-brands fa-instagram" style="color: #000;"></i></a>
                 <!--<a href="https://www.tripadvisor.com.mx/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html" target="_blank"><span class="footer_esp_ta">--</span></a>-->
-                <a class="circle_element" href="https://www.tripadvisor.com.mx/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html" target="_blank"><img src="./assets/logos/tripadvisor_l.png"></a>
+                <a class="circle_element" href="https://www.tripadvisor.com.mx/Hotel_Review-g150800-d12696075-Reviews-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html" target="_blank">
+                  <img src="./assets/logos/tripadvisor_l.png" alt="Hoteles punto MX TripAdvisor">
+                </a>
               </li>
             </ul>
             <div id="TA_cdswritereviewlg536" class="TA_cdswritereviewlg" style="display: flex; justify-content: center;">
@@ -434,7 +434,6 @@
         </div>
       </div>
     </footer>
-
   </div>
   <!-- END fh5co-page -->
 </div>
