Sitio versión inglés Contact

--- a/ng/contact.html
+++ b/ng/contact.html
@@ -514,7 +514,7 @@
                 <span id="response-mail" class="fontHover cursiveFont"> </span>
               </li>
               <li>
-                <input class="btn btn-primary btn-luxe-primary" type="button" value="Enviar" onclick="enviarEmail()" style="height: 40px; width: 90px; box-shadow: none; margin: auto;"/>
+                <input class="btn btn-primary btn-luxe-primary" type="button" value="Send" onclick="enviarEmail()" style="height: 40px; width: 90px; box-shadow: none; margin: auto;"/>
               </li>
             </ul>
           </form>
